# tudat

./: .authors.yml  .buildinfo  .bumpversion.cfg  .clang-format  .gitignore  .mailmap  AUTHORS  CHANGELOG.rst  CMakeLists.txt  CNAME  Doxyfile.in  EnckeTestDiff.diff  LICENSE  NOTICE  README  README.md  Tudat.pro  UserSettings.txt.example  aeroDiffGit.diff  applicationMain.cpp  changelog.md  changes.md  compton.diff  conf.py  config.hpp.in  extract_tests.py  flightCond.diff  fullDiff.diff  genindex.html  grepOutput.txt  header.template  heatFluxDiff.diff  index.html  index.rst  installation.rst  kepEphDiff.diff  kepTestDiff.diff  legendre3.diff  legendreDiff2.diff  legendreMod.diff  (+25 more)
Applications/: CMakeLists.txt  exampleEarthOrbitingSatellite.cpp  exampleEarthOrbitingSatellite.h
Astrodynamics/: CMakeLists.txt  astrodynamicsFunctions.cpp  astrodynamicsFunctions.h  physicalConstants.cpp  physicalConstants.h  unitTestAstrodynamicsFunctions.cpp  unitTestPhysicalConstants.cpp  unitTestPhysicalConstants.h
Astrodynamics/Bodies/: CMakeLists.txt  body.cpp  body.h  celestialBody.h  planet.cpp  planet.h  vehicle.h  vehicleExternalModel.h
Astrodynamics/EnvironmentModels/: CMakeLists.txt  atmosphereModel.h  centralGravityField.cpp  centralGravityField.h  environmentModel.h  exponentialAtmosphere.cpp  exponentialAtmosphere.h  gravityFieldModel.cpp  gravityFieldModel.h  gravityFieldParameters.cpp  gravityFieldParameters.h  predefinedGravityFieldModels.cpp  predefinedGravityFieldModels.h  predefinedGravityFieldParameters.h  sphericalHarmonicsGravityField.cpp  sphericalHarmonicsGravityField.h  standardAtmosphere.h  tabulatedAtmosphere.cpp  tabulatedAtmosphere.h  unitTestExponentialAtmosphere.cpp  unitTestExponentialAtmosphere.h  unitTestSphericalHarmonicsGravityField.cpp  unitTestSphericalHarmonicsGravityField.h  unitTestTabulatedAtmosphere.cpp  unitTestTabulatedAtmosphere.h
Astrodynamics/ForceModels/: CMakeLists.txt  aerodynamicCoefficientGenerator.cpp  aerodynamicCoefficientGenerator.h  aerodynamicCoefficientInterface.h  aerodynamicForce.cpp  aerodynamicForce.h  aerodynamics.cpp  aerodynamics.h  forceModel.cpp  forceModel.h  gravitationalForceModel.cpp  gravitationalForceModel.h  gravity.cpp  gravity.h  hypersonicLocalInclinationAnalysis.cpp  hypersonicLocalInclinationAnalysis.h  unitTestAerodynamicMomentAndAerodynamicForce.cpp  unitTestAerodynamicMomentAndAerodynamicForce.h  unitTestAerodynamicsNamespace.cpp  unitTestAerodynamicsNamespace.h  unitTestCoefficientGenerator.cpp  unitTestCoefficientGenerator.h
Astrodynamics/MissionSegments/: CMakeLists.txt  capturePhase.h  deepSpaceManeuver.h  escapeAndCapture.cpp  escapeAndCapture.h  escapePhase.h  gravityAssist.cpp  gravityAssist.h  lambertTargeter.cpp  lambertTargeter.h  librationPoint.cpp  librationPoint.h  trajectoryDesignMethod.cpp  trajectoryDesignMethod.h  unitTestDeepSpaceManeuver.cpp  unitTestDeepSpaceManeuver.h  unitTestEscapeAndCapture.cpp  unitTestEscapeAndCapture.h  unitTestGravityAssist.cpp  unitTestGravityAssist.h  unitTestLambertTargeter.cpp  unitTestLambertTargeter.h  unitTestLibrationPoints.cpp  unitTestLibrationPoints.h
Astrodynamics/MomentModels/: CMakeLists.txt  aerodynamicMoment.cpp  aerodynamicMoment.h  momentModel.cpp  momentModel.h
Astrodynamics/Propagators/: CMakeLists.txt  bodyContainer.cpp  bodyContainer.h  cartesianStateNumericalPropagator.cpp  cartesianStateNumericalPropagator.h  keplerPropagator.cpp  keplerPropagator.h  numericalPropagator.cpp  numericalPropagator.h  propagator.cpp  propagator.h  propagatorDataContainer.cpp  propagatorDataContainer.h  seriesPropagator.cpp  seriesPropagator.h  unitTestKeplerPropagator.cpp  unitTestKeplerPropagator.h  unitTestNumericalPropagator.cpp  unitTestNumericalPropagator.h
Astrodynamics/ReferenceFrames/: CMakeLists.txt  referenceFrameTransformations.cpp  referenceFrameTransformations.h  unitTestReferenceFrameTransformations.cpp  unitTestReferenceFrameTransformations.h
Astrodynamics/States/: CMakeLists.txt  approximatePlanetPositions.cpp  approximatePlanetPositions.h  approximatePlanetPositionsBase.cpp  approximatePlanetPositionsBase.h  approximatePlanetPositionsCircularCoplanar.cpp  approximatePlanetPositionsCircularCoplanar.h  approximatePlanetPositionsDataContainer.cpp  approximatePlanetPositionsDataContainer.h  cartesianElements.cpp  cartesianElements.h  cartesianPositionElements.cpp  cartesianPositionElements.h  cartesianVelocityElements.cpp  cartesianVelocityElements.h  convertMeanAnomalyBase.cpp  convertMeanAnomalyBase.h  convertMeanAnomalyToEccentricAnomaly.cpp  convertMeanAnomalyToEccentricAnomaly.h  convertMeanAnomalyToHyperbolicEccentricAnomaly.cpp  ephemeris.cpp  (+20 more)
Basics/: CMakeLists.txt  basicFunctions.cpp  basicFunctions.h
Input/: CMakeLists.txt  fileReader.cpp  fileReader.h  matrixTextFileReader.cpp  matrixTextFileReader.h  testMatrix.txt  testMatrix2.txt  testTextFile.txt  testTwoLineElementsTextFile2Line.txt  testTwoLineElementsTextFile3Line.txt  textFileReader.cpp  textFileReader.h  twoLineElementData.cpp  twoLineElementData.h  twoLineElementsTextFileReader.cpp  twoLineElementsTextFileReader.h  unitTestMatrixTextFileReader.cpp  unitTestTextFileReader.cpp  unitTestTextFileReader.h  unitTestTwoLineElementsTextFileReader.cpp  unitTestTwoLineElementsTextFileReader.h
Mathematics/: CMakeLists.txt  basicMathematicsFunctions.cpp  basicMathematicsFunctions.h  cubicSplineInterpolation.cpp  cubicSplineInterpolation.h  randomNumberGenerator.cpp  randomNumberGenerator.h  unitConversions.h  unitTestBasicMathematicsFunctions.cpp  unitTestBasicMathematicsFunctions.h  unitTestCubicSplineInterpolation.cpp  unitTestCubicSplineInterpolation.h  unitTestRandomNumberGenerator.cpp  unitTestRandomNumberGenerator.h  unitTestUnitConversions.cpp  unitTestUnitConversions.h
Output/: CMakeLists.txt  outputHandling.h  writingOutputToFile.cpp  writingOutputToFile.h
Tudat/: CMakeLists.txt  mainDoxygenPage.h  mainPage.h  namespaceDescriptions.h  tudatVersion.h
examples/: .gitignore  CMakeLists.txt  README.md
install_test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt
(+10375 files in other folders)
